Split sources variable into multiple lines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,19 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 enable_testing()
 
 # Tests
-set(SOURCES_LIST "fft/fft;fft/ntt;treap/treap;numth/prime;numth/misc;numth/modeq;flow/dinic;tree/lca;tree/centroid;tree/heavylight;tree/heavylight2")
+set(SOURCES_LIST
+    fft/fft
+    fft/ntt
+    treap/treap
+    numth/prime
+    numth/misc
+    numth/modeq
+    flow/dinic
+    tree/lca
+    tree/centroid
+    tree/heavylight
+    tree/heavylight2
+)
 
 foreach(CUR ${SOURCES_LIST})
     string(REPLACE "/" "_" UNDERSCORED "${CUR}")
