--- a/export/build
+++ b/export/build
@@ -84,6 +84,7 @@ def process_files(fs, chdir="../src"):
         text = text.replace("\t", "    ")
         text = re.sub("^(  )+", " ", text)
 
+        header, text = preprocess(text)
         text = re.sub("^ +$", "", text)
         checksums = [checksum(line) for line in text.split("\n")] + [""]
         for i in [("\\", "\\b "), ("{", "\\{"), ("}", "\\}"), ("\n\\}\n\n", "\n\\}\n\\greatsk\n"), ("\n\n", "\n\\sk\n")]:
@@ -94,15 +95,15 @@ def process_files(fs, chdir="../src"):
         def puttogether(hash, line):
             return "\\h{%s}  %s" % (hash, line) if hash else line
 
-        return "\n".join(puttogether(*a) for a in zip(checksums, highlighted.split("\n"))).strip()
+        return header, "\n".join(puttogether(*a) for a in zip(checksums, highlighted.split("\n"))).strip()
 
     def sanitize(text):
         return text.replace("_", "\\_")
 
     yield "\\input defs"
     for fn in fs:
+        header, text = process(readfile(chdir + "/" + fn))
         yield "\\header{%s}" % sanitize(fn)
-        text = process(readfile(chdir + "/" + fn))
         yield "\n\\smallskip\\verb|" + text
         yield "\\egroup"
     yield "\\singlecolumn"
@@ -117,4 +118,47 @@ def main():
 
     os.system("xetex %s" % OUT_NAME)
 
+
+def parse_header(text):
+    """Parses /** ... */ headers. Returns a tuple of Key: Content pairs."""
+    if not text.startswith("/**\n"):
+        return None
+    header = text.split("/**\n", 1)[1].split("\n */", 1)[0]
+    key = None
+    d = {}
+    for line in header.split("\n"):
+        if not line.startswith(" * "):
+            raise Exception("Every line in the header should start with \" * \".")
+        line = line.split(" * ", 1)[1]
+        if line[0] != " ":
+            # New field, eat the name and reduce it to the "line continuation" case (below)
+            line = line.split(":", 1)
+            if len(line) != 2:
+                raise Exception("Expected field name ( * Something: ) preceeding the content")
+
+            key = line[0]
+            if key in d:
+                raise Exception("Refusing to use same field twice.")
+            d[key] = []
+            line = line[1]
+
+        line = line.strip()
+        if line:
+            # line continuation (or the first line after field name stripped away)
+            if key is None:
+                raise Exception("Expected field name ( * Something: ...).")
+            d[key].append(line)
+
+    return {k: "\n".join(v) for k, v in d.items()}
+
+
+def preprocess(text):
+    header = parse_header(text)
+    if header is None:
+        header = {}
+
+    # Remove /** ... */ and /// ... comments (including excess whitespace that could remain)
+    text = re.sub(r" */\*\*.*?\*/\n?", "", text, flags=re.DOTALL | re.MULTILINE)
+    text = re.sub(r"\n? *///.*", "", text, flags=re.MULTILINE)
+    return header, text
 main()
