--- a/export/build
+++ b/export/build
@@ -8,15 +8,16 @@ import sys
 FILE_LIST = "notebook.tex"
 OUT_NAME = "out"
 
+
 def checksum(line):
     """Calculates the checksum consistently with /src/check.sh."""
     numchars = 2
     line.strip()
-    if len(line) == 0: # Print nothing for an empty line
+    if len(line) == 0:  # Print nothing for an empty line
         return ""
 
     line = re.sub(r"\s*|//.*", r"", line)
-    if len(line) == 0: # Indent a comment-only line properly
+    if len(line) == 0:  # Indent a comment-only line properly
         return " " * numchars
 
     return hashlib.md5(bytes(line + "\n", "utf8")).hexdigest()[:numchars]
@@ -59,7 +60,6 @@ def highlight(text):
     def repl(words, name, text):
         return re.sub(r"(^|\W)(%s)((?= )|(?=>)|(?=,)|$|\W)" % words, r"\1\\%s{\2}\3" % (name), text)
 
-
     # Types, templated types, keywords, constants
     d = {
         "typ": "bool char signed unsigned short long int ll ld float double void auto string ull",
@@ -70,7 +70,6 @@ def highlight(text):
 
     for name in d.keys():
         text = repl(d[name].replace(" ", "|"), name, text)
-
 
     text = re.sub(r"(^|\W)(-?\d+(U?L?L|(\.\d+)?(e-?\d+)?))((?= )|$|\W)", r"\1\\con{\2}\6", text)
     l.append(text)
@@ -143,7 +142,7 @@ def process_file(f, chdir="../src"):
 def main():
     os.chdir(os.path.realpath(os.path.dirname(sys.argv[0])))
     text = readfile(FILE_LIST).strip()
-    text = re.sub(r"\[\[(.*?)\]\]", lambda a: process_file(a.group(1)), text)
+    text = re.sub(r"(?<=\n)\[\[(.*?)\]\]", lambda a: process_file(a.group(1)), text)
     with open("%s.tex" % OUT_NAME, "w") as f:
         f.write(text)
 
@@ -166,7 +165,7 @@ def parse_header(text):
             # New field, eat the name and reduce it to the "line continuation" case (below)
             line = line.split(":", 1)
             if len(line) != 2:
-                raise Exception("Expected field name ( * Something: ) preceeding the content")
+                raise Exception("Expected field name ( * Something: ) preceeding the content: {}".format(line))
 
             key = line[0]
             if key in d:
