--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,8 @@ foreach(CUR ${SOURCES_LIST})
     string(REPLACE "/" "_" UNDERSCORED "${CUR}")
     string(REGEX MATCH "^[^/]*" FST "${CUR}")
     string(REGEX MATCH "[^/]*$" SND "${CUR}")
-    add_library(lib_${UNDERSCORED} src/${CUR}.cpp)
-    add_executable(test_${UNDERSCORED} src/${CUR}_test.cpp)
+    add_library(lib_${UNDERSCORED} src/trinerdi/${CUR}.cpp)
+    add_executable(test_${UNDERSCORED} src/trinerdi/${CUR}_test.cpp)
     target_link_libraries(test_${UNDERSCORED} gtest gtest_main lib_${UNDERSCORED})
     add_test(test_${UNDERSCORED} test_${UNDERSCORED})
 endforeach(CUR)
