Export: Fix bad whitespace/comment striping in the line hashing function

--- a/export/build
+++ b/export/build
@@ -16,7 +16,8 @@ def checksum(line):
     if len(line) == 0:  # Print nothing for an empty line
         return ""
 
-    line = re.sub(r"\s*|//.*", r"", line)
+    line = re.sub(r"//.*", r"", line)
+    line = re.sub(r"\s*", r"", line)
     if len(line) == 0:  # Indent a comment-only line properly
         return " " * numchars
 
