Export: join out.pdf and the title page together (unless asked not to)

--- a/export/build
+++ b/export/build
@@ -6,7 +6,9 @@ import sys
 import subprocess
 
 FILE_LIST = "notebook.tex"
-OUT_NAME = "out"
+TITLE_NAME = "title"
+TMP_OUT_NAME = "out"
+OUT_NAME = "notebook"
 
 
 def checksum(line):
@@ -145,20 +147,41 @@ def process_file(f, chdir="../src"):
     return "\n".join(work())
 
 
+def make_title_page():
+    return subprocess.call(["pdfcsplain", TITLE_NAME])
+
+
+def add_title_page():
+    title_pdf = "%s.pdf" % TITLE_NAME
+    tmp_pdf = "%s.pdf" % TMP_OUT_NAME
+    out_pdf = "%s.pdf" % OUT_NAME
+    return subprocess.call(["pdfunite", title_pdf, tmp_pdf, out_pdf])
+
+
 def main():
+    add_title = True
+    if len(sys.argv) > 1 and sys.argv[1] == "--no-title":
+        add_title = False
+
     os.chdir(os.path.realpath(os.path.dirname(sys.argv[0])))
     text = readfile(FILE_LIST).strip()
     text = re.sub(r"(?<=\n)\[\[(.*?)\]\]", lambda a: process_file(a.group(1)), text)
-    with open("%s.tex" % OUT_NAME, "w") as f:
+    with open("%s.tex" % TMP_OUT_NAME, "w") as f:
         f.write(text)
 
     # Two runs are needed because TOC needs to be created at all, the third one
     # is for correct page numbers in TOC (because the TOC itself may cause
     # things to appear one page later than previously)
     for i in range(3):
-        exit_code = subprocess.call(["xetex", OUT_NAME])
+        exit_code = subprocess.call(["xetex", TMP_OUT_NAME])
         if exit_code:
-            break
+            return exit_code
+
+    if add_title:
+        add_title_page()
+        os.unlink("%s.pdf" % TMP_OUT_NAME)
+    else:
+        os.rename("%s.pdf" % TMP_OUT_NAME, "%s.pdf" % OUT_NAME)
 
     return exit_code
 
