Export: rename the temporary and final output PDFs

--- a/export/build
+++ b/export/build
@@ -7,8 +7,8 @@ import subprocess
 
 FILE_LIST = "notebook.tex"
 TITLE_NAME = "title"
-TMP_OUT_NAME = "out"
-OUT_NAME = "notebook"
+TMP_OUT_NAME = "tmp"
+OUT_NAME = "out"
 
 
 def checksum(line):
@@ -166,23 +166,22 @@ def main():
     os.chdir(os.path.realpath(os.path.dirname(sys.argv[0])))
     text = readfile(FILE_LIST).strip()
     text = re.sub(r"(?<=\n)\[\[(.*?)\]\]", lambda a: process_file(a.group(1)), text)
-    with open("%s.tex" % TMP_OUT_NAME, "w") as f:
+    with open("%s.tex" % OUT_NAME, "w") as f:
         f.write(text)
 
     # Two runs are needed because TOC needs to be created at all, the third one
     # is for correct page numbers in TOC (because the TOC itself may cause
     # things to appear one page later than previously)
     for i in range(3):
-        exit_code = subprocess.call(["xetex", TMP_OUT_NAME])
+        exit_code = subprocess.call(["xetex", OUT_NAME])
         if exit_code:
             return exit_code
 
     if add_title:
+        os.rename("%s.pdf" % OUT_NAME, "%s.pdf" % TMP_OUT_NAME)
         make_title_page()
         add_title_page()
         os.unlink("%s.pdf" % TMP_OUT_NAME)
-    else:
-        os.rename("%s.pdf" % TMP_OUT_NAME, "%s.pdf" % OUT_NAME)
 
     return exit_code
 
